Rename a file 'index.html'

--- a/練習用/sample.html
+++ b/練習用/sample.html
@@ -33,7 +33,7 @@
     
     <div id="pics2">
         <div class="pics2r">
-            <img class="clsrm" src="classroom.jpg" >
+            <img class="clsrm" src="classroom.jpg" width="328px"  >
             <p class="teacher">先生</p>
             <p class="me">私</p>
         </div>
